Modernize DataTreeCandidateNode API
Use @Nullable/@NonNull properties aligned with record naming and
deprecate all the get*() methods.

JIRA: YANGTOOLS-1513
Change-Id: If7179fcc025d351ad339f3570495d41c524ce994
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>